# AI-Machine-Learning-Group-12

./: .gitignore  README.md  cifar10_cnn.py  pyproject.toml  requirements.txt
docs/: coursework_research_guide.md
docs/results/: README.md  config.json  confusion_matrix.json  metrics.json  per_class_accuracy.json  research_report.md  robustness.json  training_log.csv
src/cifar10_research_lab/: __init__.py  __main__.py  config.py  data.py  interpretability.py  models.py  reporting.py  robustness.py  train.py  visualization.py
tests/: test_config.py  test_data_utils.py  test_models.py  test_reporting.py  test_robustness.py  test_training_options.py
